# python-lambdas

./: .gitignore  Makefile  README.md  driver.py  package-lock.json  package.json  pyproject.toml  setup.py  tasks.py
.github/workflows/: commitlint.yml  deploy.yml  lint.yml  test.yml
lambdas/fetch_ncaa_matches/: handler.py
lambdas/format_dates/: handler.py
lambdas/hello/: handler.py  requirements.txt
lambdas/ingest_ncaa_matches/: handler.py
lambdas/process_ncaa_matches/: handler.py
step_functions/: step_function.json
tests/: test_fetch_ncaa_matches.py  test_format_dates.py  test_hello.py
utils/: __init__.py  lambda_observer.py  layer_observer.py  observer.py  scanner.py
